--- a/cosmetics/lend_10.html
+++ b/cosmetics/lend_10.html
@@ -17,7 +17,7 @@
             <img src="./img/base/banner.jpg" alt="СТОЙКАЯ БАЗА ПОД МАКИЯЖ ГЛАЗ NARS" class="buxom2_banner-img">
         </div>
         <div class="buxom2_item buxom2_item_pl">
-            <p class="buxom2_text">Знаменитый* праймер NARS для макияжа глаз — создает стойкую основу для любых текстур, которые вы наносите на веки. Препятствует скатыванию и усиливает яркость пигментов.<span class="buxom2_combination-text buxom2_combination-small">*В ассортименте бренда NARS.</span></p>
+            <p class="buxom2_text">Знаменитый* праймер NARS для макияжа глаз — создает стойкую основу для любых текстур, которые вы наносите на веки. Препятствует скатыванию и усиливает яркость пигментов. <span class="buxom2_combination-text buxom2_combination-small">*В&nbsp;ассортимент&nbsp;бренда NARS.</span></p>
         </div>
         <div class="buxom2_content">
             <div class="buxom2_content__row">
