--- a/cosmetics/lend_7.html
+++ b/cosmetics/lend_7.html
@@ -45,7 +45,7 @@
                     <h3 class="buxom2_combination-title">Стойкая база под макияж глаз</h3>
                     <a href="https://www.letu.ru/product/nars-stoikaya-baza-pod-makiyazh-glaz/16300015" class="buxom2_combination-btn">Купить</a>
                     <p class="buxom2_combination-text">Знаменитый* праймер для макияжа глаз — создает стойкую основу для любых текстур, которые вы наносите на веки. Препятствует скатыванию и усиливает яркость пигментов. Помимо бесцветной базы в линейке также представлены 3 оттеночные базы для разных тонов кожи.</p>
-                    <p class="buxom2_combination-text">При создании любого макияжа глаз обязательно используйте базу — вы будете приятно удивлены, обнаружив, что ваш макияж smokey eyes выглядит все так же свежо спустя несколько часов после нанесения Двойных теней для век NARS.</p>
+                    <p class="buxom2_combination-text">При создании любого макияжа глаз обязательно используйте базу — вы будете приятно удивлены, обнаружив, что ваш макияж выглядит все так же свежо спустя несколько часов после нанесения Двойных теней для век NARS.</p>
                     <p class="buxom2_combination-text">Нанесите небольшое количество праймера подушечками пальцев на все подвижное веко и как следует растушуйте. <br><br></p>
                     <p class="buxom2_combination-text buxom2_combination-small">*В ассортименте бренда NARS.</p>
                 </div>
