--- a/cosmetics/lend_8.html
+++ b/cosmetics/lend_8.html
@@ -25,7 +25,7 @@
                     <img src="./img/balsam/product.jpg" alt="БАЛЬЗАМ ДЛЯ ГУБ NARS AFTERGLOW" class="buxom2_item-img buxom2_item_fill">
                 </div>
                 <div class="buxom2_item buxom2_item_pl">
-                    <p class="buxom2_text">Приятная текстура бальзама создает легкий сияющий эффект, который в сочетании с полупрозрачным оттенком делает губы увлажненными и соблазнительными.  Представлен в двух оттенках.</p>
+                    <p class="buxom2_text">Приятная текстура бальзама создает легкий сияющий эффект, который в сочетании с полупрозрачным оттенком делает губы увлажненными и соблазнительными.</p>
                 </div>
             </div>
             <div class="buxom2_content__row">
