--- a/cosmetics/lend_9.html
+++ b/cosmetics/lend_9.html
@@ -77,7 +77,7 @@
                 <div class="buxom2_combination-content">
                     <h3 class="buxom2_combination-title">Стойкий тональный крем</h3>
                     <a href="https://www.letu.ru/product/nars-stoikii-tonalnyi-krem-natural-radiant-longwear-foundation/62200016" class="buxom2_combination-btn">Купить</a>
-                    <p class="buxom2_combination-text">Идеальный партнер Консилер-крема NARS. Одного нажатия будет достаточно для создания тонкого легкого покрытия. Две капли — для более плотного покрытия без намека на недостатки. Специальный комплекс частиц обеспечивает эффект светящейся изнутри кожи, которая выглядит абсолютно естественно.</p>
+                    <p class="buxom2_combination-text">Одного нажатия будет достаточно для создания тонкого легкого покрытия. Две капли — для более плотного покрытия без намека на недостатки. Специальный комплекс частиц обеспечивает эффект светящейся изнутри кожи, которая выглядит абсолютно естественно.</p>
                     <p class="buxom2_combination-text">Стойкость до 16 часов. Дополнительную стойкость придаст Праймер для сияния кожи и Светоотражающая фиксирующая пудра.</p>
                 </div>
             </article>
