--- a/kalashnikov/index.html
+++ b/kalashnikov/index.html
@@ -14,25 +14,45 @@
                     <img src="./img/logo.png" alt="Логотип" class="logo__img">
                 </div>
                 <nav class="nav">
-                    <ul class="nav__list row justify-content-between">
+                    <ul class="nav__list">
                         <li class="nav__item">
-                            <a href="#" class="nav__link">О мероприятии</a>
+                            <a href="#about" class="nav__link js-scroll-link">О мероприятии</a>
                         </li>
                         <li class="nav__item">
-                            <a href="#" class="nav__link">Трансляция</a>
+                            <a href="#translation" class="nav__link js-scroll-link">Трансляция</a>
                         </li>
                         <li class="nav__item">
-                            <a href="#" class="nav__link">Программа</a>
+                            <a href="#program" class="nav__link js-scroll-link">Программа</a>
                         </li>
                         <li class="nav__item">
-                            <a href="#" class="nav__link">Контакты</a>
+                            <a href="#contacts" class="nav__link js-scroll-link">Контакты</a>
                         </li>
                     </ul>
                 </nav>
+                <button class="burger js-burger"><span></span></button>
             </div>
         </div>
     </header>
+    <div class="menu js-menu">
+        <nav class="nav">
+            <ul class="nav__list">
+                <li class="nav__item">
+                    <a href="#about" class="nav__link js-scroll-link">О мероприятии</a>
+                </li>
+                <li class="nav__item">
+                    <a href="#translation" class="nav__link js-scroll-link">Трансляция</a>
+                </li>
+                <li class="nav__item">
+                    <a href="#program" class="nav__link js-scroll-link">Программа</a>
+                </li>
+                <li class="nav__item">
+                    <a href="#contacts" class="nav__link js-scroll-link">Контакты</a>
+                </li>
+            </ul>
+        </nav>
+    </div>
     <main class="main">
+        <img class="hero__bg" src="./img/header-bg.png" alt="Фон">
         <section class="hero">
             <div class="container">
                 <div class="hero__wrap">
@@ -46,7 +66,7 @@
                     </div>
                     <div class="hero__timer timer">
                         <span class="timer__label hero__text_silver">До начала мероприятия </span>
-                        <div class="timer__container">
+                        <div class="timer__container js-timer">
                             <div class="timer__item">
                                 <span class="timer__num">
                                     <span>0</span>
@@ -88,15 +108,18 @@
                 </div>
             </div>
         </section>
-        <div class="embed">
+        <div id="about" class="embed">
             <div class="container">
                 <div class="embed__wrap">
-                    <!-- <iframe class="embed__iframe" src="https://www.youtube.com/embed/kbPiWmoXObM" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe> -->
+                    <div class="embed__iframe-wrap">
+                        <iframe class="embed__iframe" src="https://www.youtube.com/embed/kbPiWmoXObM" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                    </div>
                     <span class="embed__subtitle"><span>Обращение генерального директора</span></span>
                 </div>
             </div>
         </div>
-        <section class="translation">
+        <section id="translation" class="translation">
+            <img class="translation__bg" src="./img/translation-bg.png" alt="Фон">
             <div class="container">
                 <div class="big-title">
                     <img class="big-title__bg" src="./img/big-title_bg.png" alt="Фон - разделитель">
@@ -104,7 +127,8 @@
                 </div>
             </div>
         </section>
-        <section class="program">
+        <section id="program" class="program">
+            <img class="program__bg" src="./img/program-bg.png" alt="Фон">
             <div class="container">
                 <div class="big-title">
                     <img class="big-title__bg" src="./img/big-title_bg.png" alt="Фон - разделитель">
@@ -196,6 +220,7 @@
             </div>
         </section>
         <section class="question">
+            <img class="question__bg" src="./img/question-bg.png" alt="Фон">
             <div class="container">
                 <div class="big-title">
                     <img class="big-title__bg" src="./img/big-title_bg.png" alt="Фон - разделитель">
@@ -213,10 +238,10 @@
                         </div>
                         <div class="form__row form__row_between">
                             <label class="form__file-label">
-                                <input type="file" accept="image/*" class="form__file">
+                                <input type="file" accept="image/*" class="form__file js-form-file">
                                 <span class="form__file-text">Загрузить изображение</span>
                             </label>
-                            <span class="form__file-result active"><span class="form__file-name js-file-name">3333</span><span class="form__file-success">успешно загружен!</span></span>
+                            <span class="form__file-result"><span class="form__file-name js-form-file-name">3333</span><span class="form__file-success">успешно загружен!</span></span>
                         </div>
                         <div class="form__row form__row_center">
                             <button type="submit" class="button form__button"><span>Отправить</span></button>
@@ -226,6 +251,7 @@
             </div>
         </section>
         <section class="tops">
+            <img class="tops__bg" src="./img/tops-bg.png" alt="Фон">
             <div class="container">
                 <div class="big-title">
                     <img class="big-title__bg" src="./img/big-title_bg.png" alt="Фон - разделитель">
@@ -261,8 +287,10 @@
             </div>
         </section>
     </main>
-    <footer class="footer">
+    <footer id="contacts" class="footer">
+        <img class="footer__bg" src="./img/contacts-bg.png" alt="Фон">
         <div class="container">
+            <img class="big-title__bg" src="./img/big-title_bg.png" alt="Фон - разделитель">
             <div class="footer__top">
                 <div class="logo">
                     <img src="./img/logo.png" alt="Логотип" class="logo__img">
@@ -270,16 +298,16 @@
                 <nav class="nav">
                     <ul class="nav__list row justify-content-between">
                         <li class="nav__item">
-                            <a href="#" class="nav__link">О мероприятии</a>
+                            <a href="#about" class="nav__link js-scroll-link">О мероприятии</a>
                         </li>
                         <li class="nav__item">
-                            <a href="#" class="nav__link">Трансляция</a>
+                            <a href="#translation" class="nav__link js-scroll-link">Трансляция</a>
                         </li>
                         <li class="nav__item">
-                            <a href="#" class="nav__link">Программа</a>
+                            <a href="#program" class="nav__link js-scroll-link">Программа</a>
                         </li>
                         <li class="nav__item">
-                            <a href="#" class="nav__link">Контакты</a>
+                            <a href="#contacts" class="nav__link js-scroll-link">Контакты</a>
                         </li>
                     </ul>
                 </nav>
@@ -298,7 +326,7 @@
                         <input type="email" name="user_email" class="form__input form__input_red" placeholder="E-mail">
                     </div>
                     <div class="footer__form-col">
-                        <textarea class="form__input form__input_red" name="user__comment" rows="4" placeholder="Ваш вопрос"></textarea>
+                        <textarea class="form__input form__input_red" name="user__comment" rows="3" placeholder="Ваш вопрос"></textarea>
                     </div>
                     <button type="submit" class="button form__button"><span>Отправить</span></button>
                 </form>
