--- a/kalashnikov/index.html
+++ b/kalashnikov/index.html
@@ -112,7 +112,7 @@
             <div class="container">
                 <div class="embed__wrap">
                     <div class="embed__iframe-wrap">
-                        <iframe class="embed__iframe" src="https://www.youtube.com/embed/kbPiWmoXObM" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                        <iframe class="embed__iframe" src="http://panel.cavadro.com/iframe/2" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                     </div>
                     <span class="embed__subtitle"><span>Обращение генерального директора</span></span>
                 </div>
@@ -124,6 +124,9 @@
                 <div class="big-title">
                     <img class="big-title__bg" src="./img/big-title_bg.png" alt="Фон - разделитель">
                     <h2 class="big-title__text">Трансляция мероприятия</h2>
+                    <div class="translation__media">
+                        <iframe src="http://panel.cavadro.com/iframe/1" frameborder="0"></iframe>
+                    </div>
                 </div>
             </div>
         </section>
@@ -241,7 +244,7 @@
                                 <input type="file" accept="image/*" class="form__file js-form-file">
                                 <span class="form__file-text">Загрузить изображение</span>
                             </label>
-                            <span class="form__file-result"><span class="form__file-name js-form-file-name">3333</span><span class="form__file-success">успешно загружен!</span></span>
+                            <span class="form__file-result"><span class="form__file-name js-form-file-name">Файл </span><span class="form__file-success">успешно загружен!</span></span>
                         </div>
                         <div class="form__row form__row_center">
                             <button type="submit" class="button form__button"><span>Отправить</span></button>
