--- a/kalashnikov/index.html
+++ b/kalashnikov/index.html
@@ -222,6 +222,53 @@
                 </div>
             </div>
         </section>
+        <section class="gallery">
+            <div class="container">
+                <div class="big-title">
+                    <img class="big-title__bg" src="./img/big-title_bg.png" alt="Фон - разделитель">
+                    <h2 class="big-title__text">Фотогалерея</h2>
+                </div>
+                <p class="question__subtitle">Отправляй свое фото в <a href="#" class="gallery__wa"><img src="./img/wa-icon.png" alt="Иконка вотсапп"> WhatsApp</a> или <a href="#" class="gallery__tg"><img src="./img/tg-icon.png" alt="Иконка телеграмм"> Telegram</a> на номер: <span class="gallery__medium">+7 929 912-46-43</span><br> и они появятся в этой ленте!</p>
+                <div class="gallery__container">
+                    <div class="gallery__item js-gallery-item" data-index="0">
+                        <img src="./img/gallery-img-1.png" alt="Фото в галерее">
+                    </div>
+                    <div class="gallery__item js-gallery-item" data-index="1">
+                        <img src="./img/gallery-img-1.png" alt="Фото в галерее">
+                    </div>
+                    <div class="gallery__item js-gallery-item" data-index="2">
+                        <img src="./img/gallery-img-1.png" alt="Фото в галерее">
+                    </div>
+                    <div class="gallery__item js-gallery-item" data-index="3">
+                        <img src="./img/gallery-img-1.png" alt="Фото в галерее">
+                    </div>
+                    <div class="gallery__item js-gallery-item" data-index="4">
+                        <img src="./img/gallery-img-1.png" alt="Фото в галерее">
+                    </div>
+                    <div class="gallery__item js-gallery-item" data-index="5">
+                        <img src="./img/gallery-img-1.png" alt="Фото в галерее">
+                    </div>
+                    <div class="gallery__item js-gallery-item" data-index="6">
+                        <img src="./img/gallery-img-1.png" alt="Фото в галерее">
+                    </div>
+                    <div class="gallery__item js-gallery-item" data-index="7">
+                        <img src="./img/gallery-img-1.png" alt="Фото в галерее">
+                    </div>
+                    <div class="gallery__item js-gallery-item" data-index="8">
+                        <img src="./img/gallery-img-1.png" alt="Фото в галерее">
+                    </div>
+                    <div class="gallery__item js-gallery-item" data-index="9">
+                        <img src="./img/gallery-img-1.png" alt="Фото в галерее">
+                    </div>
+                    <div class="gallery__item js-gallery-item" data-index="10">
+                        <img src="./img/gallery-img-1.png" alt="Фото в галерее">
+                    </div>
+                    <div class="gallery__item js-gallery-item" data-index="11">
+                        <img src="./img/gallery-img-1.png" alt="Фото в галерее">
+                    </div>
+                </div>
+            </div>
+        </section>
         <section class="question">
             <img class="question__bg" src="./img/question-bg.png" alt="Фон">
             <div class="container">
@@ -341,6 +388,34 @@
             </div>
         </div>
     </footer>
+
+    <div class="swiper-popup js-popup">
+        <button class="swiper-popup__close js-popup-close"></button>
+        <div class="swiper-popup__body swiper-container js-popup-swiper">
+            <div class="swiper-wrapper">
+                <div class="swiper-slide swiper-popup__item">
+                    <img class="swiper-popup__img swiper-lazy" data-src="./img/slide_1.jpg" alt="Фото в слайдере">
+                    <div class="swiper-lazy-preloader swiper-lazy-preloader-white"></div>
+                </div>
+                <div class="swiper-slide swiper-popup__item">
+                    <img class="swiper-popup__img swiper-lazy" data-src="./img/gallery-img-1.png" alt="Фото в слайдере">
+                    <div class="swiper-lazy-preloader swiper-lazy-preloader-white"></div>
+                </div>
+                <div class="swiper-slide swiper-popup__item">
+                    <img class="swiper-popup__img swiper-lazy" data-src="./img/gallery-img-1.png" alt="Фото в слайдере">
+                    <div class="swiper-lazy-preloader swiper-lazy-preloader-white"></div>
+                </div>
+                <div class="swiper-slide swiper-popup__item">
+                    <img class="swiper-popup__img swiper-lazy" data-src="./img/gallery-img-1.png" alt="Фото в слайдере">
+                    <div class="swiper-lazy-preloader swiper-lazy-preloader-white"></div>
+                </div>
+            </div>
+            <a href="#" class="swiper__control swiper__control_prev"></a>
+            <a href="#" class="swiper__control swiper__control_next"></a>
+        </div>
+    </div>
+
+    <script src="./js/swiper-bundle.min.js"></script>
     <script src="./js/main.js"></script>
 </body>
 </html>
