enough for today...

--- a/electro/index.html
+++ b/electro/index.html
@@ -13,7 +13,7 @@
                 <a href="./index.html" class="logo">
                     <img src="./img/logo.svg" alt="Логотип" class="logo__img">
                 </a>
-                <a href="./services.html" class="button button_orange services-btn">
+                <a href="./services.html" class="button button_orange button_no-hover services-btn">
                     <span class="services-btn__icon">
                         <span></span>
                     </span>
@@ -54,7 +54,45 @@
         </div>
     </header>
     <main class="main">
-
+        <section class="hero">
+            <picture>
+                <source srcset="./img/hero-bg.webp" type="image/webp">
+                <img class="hero__bg" src="./img/hero-bg.jpg" alt="Фон первого экрана">
+            </picture>
+            <div class="container">
+                <div class="hero__content">
+                    <span class="hero__pretitle">Работаем по всей Украине</span>
+                    <h1 class="hero__title">Защитим от прямого удара молнии!</h1>
+                    <p class="hero__subtitle">Полный комплекс работ «под ключ» начиная с обследования и заканчивая подготовкой исполнительской документации.</p>
+                    <div class="hero__buttons">
+                        <button class="button button_orange hero__button"><img src="./img/icon-lightning-sm.png" alt="Иконка"> Оставить заявку</button>
+                        <a href="#calculator" class="button button_blue hero__button js-scroll-link"><img src="./img/icon-house-sm.png" alt="Иконка"> Рассчет стоимости</a>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="services">
+            <div class="container">
+                <h2 class="section__title">Наши услуги</h2>
+                <div class="services__wrap">
+                    <article class="services__item">
+                        22
+                    </article>
+                    <article class="services__item">
+                        22
+                    </article>
+                    <article class="services__item">
+                        22
+                    </article>
+                    <article class="services__item">
+                        22
+                    </article>
+                    <article class="services__item">
+                        22
+                    </article>
+                </div>
+            </div>
+        </section>
     </main>
     <footer class="footer">
 
