--- a/fujifilm/index.html
+++ b/fujifilm/index.html
@@ -345,33 +345,64 @@
             <div class="slider__body js-slider-color">
                 <div class="swiper-wrapper">
                     <div class="swiper-slide slider__item">
-                        <span class="slider__author">Prasit Limpasatirakit ©</span>
-                        <img class="swiper-lazy slider__img" data-src="./img/rolls/slide_1.jpg" data-srcset="./img/rolls/slide_1.webp" alt="Фото в слайдере">
+                        <img class="swiper-lazy slider__img" data-src="./img/rolls/film_simulations_01.jpg" data-srcset="./img/rolls/film_simulations_01.webp" alt="Provia">
                         <div class="swiper-lazy-preloader swiper-lazy-preloader-red"></div>
+                        <span class="slider__mode">Provia</span>
                     </div>
                     <div class="swiper-slide slider__item">
-                        <img class="swiper-lazy slider__img" data-src="./img/rolls/slide_2.jpg" data-srcset="./img/rolls/slide_2.webp" alt="Фото в слайдере">
+                        <img class="swiper-lazy slider__img" data-src="./img/rolls/film_simulations_02.jpg" data-srcset="./img/rolls/film_simulations_02.webp" alt="Velvia">
                         <div class="swiper-lazy-preloader swiper-lazy-preloader-red"></div>
+                        <span class="slider__mode">Velvia</span>
                     </div>
                     <div class="swiper-slide slider__item">
-                        <img class="swiper-lazy slider__img" data-src="./img/rolls/slide_3.jpg" data-srcset="./img/rolls/slide_3.webp" alt="Фото в слайдере">
+                        <img class="swiper-lazy slider__img" data-src="./img/rolls/film_simulations_03.jpg" data-srcset="./img/rolls/film_simulations_03.webp" alt="ASTIA">
                         <div class="swiper-lazy-preloader swiper-lazy-preloader-red"></div>
+                        <span class="slider__mode">ASTIA</span>
                     </div>
                     <div class="swiper-slide slider__item">
-                        <img class="swiper-lazy slider__img" data-src="./img/rolls/slide_4.jpg" data-srcset="./img/rolls/slide_4.webp" alt="Фото в слайдере">
+                        <img class="swiper-lazy slider__img" data-src="./img/rolls/film_simulations_04.jpg" data-srcset="./img/rolls/film_simulations_04.webp" alt="Classic Chrome">
                         <div class="swiper-lazy-preloader swiper-lazy-preloader-red"></div>
+                        <span class="slider__mode">Classic Chrome</span>
                     </div>
                     <div class="swiper-slide slider__item">
-                        <img class="swiper-lazy slider__img" data-src="./img/rolls/slide_5.jpg" data-srcset="./img/rolls/slide_5.webp" alt="Фото в слайдере">
+                        <img class="swiper-lazy slider__img" data-src="./img/rolls/film_simulations_05.jpg" data-srcset="./img/rolls/film_simulations_05.webp" alt="PRO Neg HI">
                         <div class="swiper-lazy-preloader swiper-lazy-preloader-red"></div>
+                        <span class="slider__mode">PRO Neg HI</span>
                     </div>
                     <div class="swiper-slide slider__item">
-                        <img class="swiper-lazy slider__img" data-src="./img/rolls/slide_6.jpg" data-srcset="./img/rolls/slide_6.webp" alt="Фото в слайдере">
+                        <img class="swiper-lazy slider__img" data-src="./img/rolls/film_simulations_06.jpg" data-srcset="./img/rolls/film_simulations_06.webp" alt="PRO Neg Std">
                         <div class="swiper-lazy-preloader swiper-lazy-preloader-red"></div>
+                        <span class="slider__mode">PRO Neg Std</span>
                     </div>
                     <div class="swiper-slide slider__item">
-                        <img class="swiper-lazy slider__img" data-src="./img/rolls/slide_7.jpg" data-srcset="./img/rolls/slide_7.webp" alt="Фото в слайдере">
+                        <img class="swiper-lazy slider__img" data-src="./img/rolls/film_simulations_07.jpg" data-srcset="./img/rolls/film_simulations_07.webp" alt="Classic Neg">
                         <div class="swiper-lazy-preloader swiper-lazy-preloader-red"></div>
+                        <span class="slider__mode">Classic Neg</span>
+                    </div>
+                    <div class="swiper-slide slider__item">
+                        <img class="swiper-lazy slider__img" data-src="./img/rolls/film_simulations_08.jpg" data-srcset="./img/rolls/film_simulations_08.webp" alt="ETERNA">
+                        <div class="swiper-lazy-preloader swiper-lazy-preloader-red"></div>
+                        <span class="slider__mode">ETERNA</span>
+                    </div>
+                    <div class="swiper-slide slider__item">
+                        <img class="swiper-lazy slider__img" data-src="./img/rolls/film_simulations_09.jpg" data-srcset="./img/rolls/film_simulations_09.webp" alt="ETERNA Bleach Bypass">
+                        <div class="swiper-lazy-preloader swiper-lazy-preloader-red"></div>
+                        <span class="slider__mode">ETERNA Bleach Bypass</span>
+                    </div>
+                    <div class="swiper-slide slider__item">
+                        <img class="swiper-lazy slider__img" data-src="./img/rolls/film_simulations_10.jpg" data-srcset="./img/rolls/film_simulations_10.webp" alt="ACROS">
+                        <div class="swiper-lazy-preloader swiper-lazy-preloader-red"></div>
+                        <span class="slider__mode">ACROS</span>
+                    </div>
+                    <div class="swiper-slide slider__item">
+                        <img class="swiper-lazy slider__img" data-src="./img/rolls/film_simulations_11.jpg" data-srcset="./img/rolls/film_simulations_11.webp" alt="Monochrome">
+                        <div class="swiper-lazy-preloader swiper-lazy-preloader-red"></div>
+                        <span class="slider__mode">Monochrome</span>
+                    </div>
+                    <div class="swiper-slide slider__item">
+                        <img class="swiper-lazy slider__img" data-src="./img/rolls/film_simulations_12.jpg" data-srcset="./img/rolls/film_simulations_12.webp" alt="Sepia">
+                        <div class="swiper-lazy-preloader swiper-lazy-preloader-red"></div>
+                        <span class="slider__mode">Sepia</span>
                     </div>
                 </div>
                 <div class="slider__control-container">
@@ -386,22 +417,10 @@
                         </svg>
                     </button>
                 </div>
-                <div class="slider__pagination-block">
-                    <div class="slider__names">
-                        <h3 class="slider__name">Classic Neg</h3>
-                        <h3 class="slider__name">Color Chrome</h3>
-                        <h3 class="slider__name">Velvia</h3>
-                        <h3 class="slider__name">ETERNA Bleach Bypass</h3>
-                        <h3 class="slider__name">Provia</h3>
-                        <h3 class="slider__name">Acros</h3>
-                        <h3 class="slider__name">Acros Black Image Tone</h3>
-                    </div>
-                    <div class="swiper-pagination slider__pagination"></div>
-                </div>
             </div>
             <div class="sooc">
                 <div class="container">
-                    <p class="text">Выражение «Прямо из камеры» (<a href="#">#SOOC</a>) действительно приобретает новый смысл благодаря легендарной цветопередаче Fujifilm и дополнительным настройкам цвета.</p>
+                    <p class="text">Выражение «Прямо из камеры» (<a href="https://www.instagram.com/explore/tags/sooc/" target="_blank">#SOOC</a>) действительно приобретает новый смысл благодаря легендарной цветопередаче Fujifilm и дополнительным настройкам цвета.</p>
                     <div class="row__container row__container_mt30">
                         <div class="row">
                             <div class="column">
@@ -429,7 +448,7 @@
                         <div class="row mt-30">
                             <p class="text">Fujifilm более 85 лет разрабатывает фотопленку и совершенствует технологии цветопередачи. С X-S10 процесс постобработки можно свести к минимуму. </p>
                         </div>
-                        <div class="row mt-30">
+                        <div class="row row_center mt-30">
                             <p class="section__subtitle">Уделяйте больше внимания на сюжет и кадрирование, а цвет мы берем на себя.</p>
                         </div>
                     </div>
@@ -513,7 +532,11 @@
                 <h3 class="section__subtitle">Все это со стабилизацией!</h3>
                 <p class="text text_mt30"> <img  class="float-img float-img_left" src="./img/float-img_5.png" alt="Изображение в тексте"> В дополнение к встроенной стабилизации изображения (IBIS), включение режима цифровой стабилизации изображения (DIS) позволит мощно компенсировать дрожание камеры даже при ходьбе. Режим форсирования стабилизации (IS Mode Boost) обеспечивает еще большую стабилизацию, почти устраняя дрожание камеры при съемке с рук, как если бы вы снимали видео с использованием штатива.</p>
                 <video poster="./video/posters/poster_4.jpg" playsinline muted loop autoplay preload="none" data-src="./video/DIS.mp4" class="filming__img mt-50 video-unloaded"></video>
-                <h3 class="section__subtitle mt-50">X-S10 любит снимать видео!</h3>
+                <div class="filming__subtext">
+                    <span class="text">Стабилизация отключена</span>
+                    <span class="text">Стабилизация включена</span>
+                </div>
+                <h3 class="section__subtitle mt-30">X-S10 любит снимать видео!</h3>
                 <p class="text text_mt30">Корпус камеры разработан с учетом того, что на нее будут снимать видео. К блоку матрицы подведен радиатор, который охлаждает ее и позволяет снимать видео продолжительное время.</p>
             </div>
             <div class="filming__colored mt-50">
@@ -667,7 +690,7 @@
                                         <img  src="./img/SmallRig-1.png" alt="Идеальна для влога">
                                     </picture>
                                     <h3 class="section__subtitle mt-50">Клетка SmallRig для FUJIFILM X-S10 </h3>
-                                    <p class="text text_mt30"><a href="#">Клетка SmallRig</a> разработана специально для камеры FUJIFILM X-S10 и имеет полностью металлическую конструкцию. Клетка прочно и надёжно фиксирует камеру и даёт множество опций крепления дополнительного оборудования и аксессуаров, а также защищает ее от механических повреждений.</p>
+                                    <p class="text text_mt30"><a href="https://www.smallrig.com/smallrig-cage-for-fujifilm-x-s10-camera-3087.html" target="_blank">Клетка SmallRig</a> разработана специально для камеры FUJIFILM X-S10 и имеет полностью металлическую конструкцию. Клетка прочно и надёжно фиксирует камеру и даёт множество опций крепления дополнительного оборудования и аксессуаров, а также защищает ее от механических повреждений.</p>
                                 </article>
                             </div>
                             <div class="column">
@@ -808,20 +831,20 @@
             <h2 class="section__title section__title_tac">СРАВНЕНИЕ</h2>
             <button class="button text competition__button mt-50 js-open-popup-table">
                 <div class="competition__item">
-                    <img class="competition__img" src="./img/X-T30.jpg" alt="Фото камеры">
-                    <img src="./img/X-T30.png" alt="Лого камеры" class="competition__logo">
-                </div>
-                <div class="competition__item">
-                    <img class="competition__img" src="./img/X-S10.jpg" alt="Фото камеры">
-                    <img src="./img/X-S10.png" alt="Лого камеры" class="competition__logo">
-                </div>
-                <div class="competition__item">
                     <img class="competition__img" src="./img/X-T4.jpg" alt="Фото камеры">
                     <img src="./img/X-T4.png" alt="Лого камеры" class="competition__logo">
                 </div>
                 <div class="competition__item">
                     <img class="competition__img" src="./img/X-T3.jpg" alt="Фото камеры">
                     <img src="./img/X-T3.png" alt="Лого камеры" class="competition__logo">
+                </div>
+                <div class="competition__item">
+                    <img class="competition__img" src="./img/X-S10.jpg" alt="Фото камеры">
+                    <img src="./img/X-S10.png" alt="Лого камеры" class="competition__logo">
+                </div>
+                <div class="competition__item">
+                    <img class="competition__img" src="./img/X-T30.jpg" alt="Фото камеры">
+                    <img src="./img/X-T30.png" alt="Лого камеры" class="competition__logo">
                 </div>
             </button>
         </section>
@@ -1013,7 +1036,7 @@
             <div class="row">
                 <div class="column">
                     <div class="column__inner">
-                        <div class="footer__row">
+                        <div class="footer__row row_between">
                             <div class="column">
                                 <svg class="footer__logo" xmlns:dc="http://purl.org/dc/elements/1.1/" xmlns:cc="http://creativecommons.org/ns#" xmlns:rdf="http://www.w3.org/1999/02/22-rdf-syntax-ns#" xmlns:svg="http://www.w3.org/2000/svg" xmlns="http://www.w3.org/2000/svg" xmlns:sodipodi="http://sodipodi.sourceforge.net/DTD/sodipodi-0.dtd" xmlns:inkscape="http://www.inkscape.org/namespaces/inkscape" version="1.1" id="svg25166" viewBox="0 0 1028.9351 171.233" height="171.233" width="1028.9351" inkscape:version="0.91 r13725" sodipodi:docname="Fujifilm_logo.svg">
                                     <g id="g5512" transform="matrix(2.0661355,0,0,2.0661355,0,-4.1323115)">
@@ -1047,6 +1070,7 @@
                                     </g>
                                 </svg>
                             </div>
+                            <span class="footer__divide"></span>
                             <div class="column">
                                 <img  class="footer__logo" src="./img/x-s10-logo.png" alt="Лого камеры">
                             </div>
